Edit some structure code and fix align bugs

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -343,6 +343,7 @@ ol, ul {
   margin-top: 5px;
   padding: 0.5rem 1rem;
   font-size: 1.5rem;
+  text-align: center;
   color: #fff;
   background: #fc5837;
   z-index: 1000;
@@ -420,12 +421,13 @@ ol, ul {
 .container__product__top-view .top-view-detail__cat, .container__product__top-view .top-view-detail__brand {
   color: #7b7b7b;
   font-size: 1.5rem;
-  margin-bottom: 0.3rem;
 }
 .container__product__top-view .top-view-detail__cat a, .container__product__top-view .top-view-detail__brand a {
   color: #fff;
   background: #7b7b7b;
   padding: 0.2rem 0.5rem;
+  display: inline-block;
+  margin-bottom: 0.5rem;
 }
 .container__product__top-view .top-view-detail__cat a:hover, .container__product__top-view .top-view-detail__brand a:hover {
   color: #fff;
@@ -630,6 +632,7 @@ ol, ul {
   width: 100%;
   height: 50rem;
   font-size: 2.5rem;
+  text-align: center;
   color: #7b7b7b;
 }
 .container__product__more {
